# ip_project

./: .gitignore  CMakeLists.txt  build.bat  execute.bat
include/: ColorTransformer.hpp  Editor.hpp  Filter.hpp  Tool.hpp
src/: ColorTransformer.cpp  Editor.cpp  Filter.cpp  main.cpp
ui/: default.qml
ui/tools/color/: ColorTool.qml
